clusters/cluster0/kubernetes/apps/joplin/joplin/joplin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: joplin
  name: joplin
  namespace: joplin
spec:
  template:
    metadata:
      labels:
        app: joplin
    spec:
      containers:
        - image: joplin/server:latest
          imagePullPolicy: Always
          name: joplin
          ports:
          - name: joplin
            containerPort: 22300
            protocol: TCP
          volumeMounts:
          - name: joplin-config
            mountPath: /config
          resources:
            requests:
              memory: 275Mi
              cpu: 75m
            limits:
              memory: 450Mi
              cpu: 300m
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:
      - name: joplin-config
        persistentVolumeClaim:
          claimName: "joplin-config"
  selector:
    matchLabels:
      app: joplin
