clusters/cluster0/kubernetes/apps/joplin/joplin/joplin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: joplin
  namespace: joplin
  annotations:
    external-dns.alpha.kubernetes.io/hostname: biggs.dog
spec:
  ingressClassName: external
  rules:
  - host: joplin.biggs.dog
    http:
      paths:
      - path: /
        pathType: Prefix
        backend: 
          service:
            name: joplin-service
            port:
              number: 22300
